# vibe-flow

./: .gitignore  .prettierignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES.md  ROADMAP.md  development-plan.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  project-architecture.md  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: DESIGN_LANGUAGE.md  HANDOFF-M7.md  INSTALLATION.md  KNOWN_LIMITATIONS.md  PERFORMANCE.md  PRIVACY.md  QUICK_START.md  RELEASE.md  TROUBLESHOOTING.md
scripts/: check-release-readiness.mjs  inspect-build.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_capture_sessions.sql  0002_process_events.sql  0003_external_agent_sessions.sql  0004_network_requests.sql  0005_llm_exchanges.sql  0006_governance.sql  0007_agent_only.sql  0008_remove_advanced_capture.sql  0009_session_model_usage.sql  0010_session_base_url.sql  0011_session_user_meta.sql
src-tauri/src/: app_state.rs  lib.rs  main.rs
src-tauri/src/application/: analytics_service.rs  governance_service.rs  history_service.rs  mod.rs  ports.rs  query_service.rs
src-tauri/src/domain/: analytics.rs  error.rs  event.rs  governance.rs  history.rs  mod.rs  search.rs  session.rs
src-tauri/src/infrastructure/history/: adapter.rs  claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  watcher.rs
src-tauri/src/infrastructure/persistence/: sqlite.rs
src-tauri/src/interfaces/: channels.rs  commands.rs  dto.rs  mod.rs
src/app/: App.tsx  styles.css  (+1 more)
(+51 files in other folders)
